[#5] Fixed background and forms height, fixed fix Rails language change when changing Angular language, changed Rails errors i18n to Angular i18n

--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -1,8 +1,11 @@
+// HEADER //
+
 header.main-header {
   z-index: 10000;
   position: fixed;
-  height: 60px;
+  top:0px;
   background: #fff;
+  height: 60px;
   width: 100%;
   border-bottom: 1px #ecebe8 solid;
 }
