--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -1,3 +1,13 @@
+// BACKGROUND //
+
+.background {
+  background-repeat: no-repeat;
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  top:0px;
+}
+
 [ng-click] {
   cursor: pointer;
 }
