--- a/app/assets/templates/users/user_edit.user_change_password.html.slim
+++ b/app/assets/templates/users/user_edit.user_change_password.html.slim
@@ -1,8 +1,6 @@
 div ng-repeat="alert in alerts"
-  alert close='closeAlert($index)' type='{{alert.type}}' style='margin-bottom:0px;' ng-show='{{alert.message == 1}}'
-    ' {{ "USER_EDIT_CHANGE_PASSWORD_ALERT_SUCCESS" | translate }}
-  alert close='closeAlert($index)' type='{{alert.type}}' style='margin-bottom:0px;' ng-show='{{alert.message == 2}}'
-    ' {{ "USER_EDIT_CHANGE_PASSWORD_ALERT_FAILURE" | translate }}
+  alert close='closeAlert($index)' type='{{alert.type}}' style='margin-bottom:0px;'
+    .message translate="{{alert.message}}"
 
 .account-form style="width:100%;"
   h3.text-center.uppercase.uppercase style="margin-top:0px;"
@@ -14,23 +12,23 @@ div ng-repeat="alert in alerts"
 
       .errors ng-show="changePasswordForm.old_password.$touched && changePasswordForm.old_password.$dirty"
         .field-error ng-show="changePasswordForm.old_password.$error.required && changePasswordForm.old_password.$dirty"
-          ' {{ "OLD_ERROR_PASSWORD_REQUIRED" | translate }}
+          ' {{ "ERROR_OLD_PASSWORD_REQUIRED" | translate }}
 
     .field
       input.form-control.span12(type="password" maxlength="60" placeholder="{{ 'NEW_PASSWORD_PLACEHOLDER' | translate }}" ng-model="formData.password.new_password" required id='pw1' name='pw1' ng-minlength='6'tooltip="{{ 'NEW_PASSWORD_TOOLTIP' | translate }}" tooltip-trigger="focus" tooltip-placement="left")
 
       .errors ng-show="changePasswordForm.pw1.$touched && changePasswordForm.pw1.$dirty"
         .field-error ng-show="changePasswordForm.pw1.$error.required && changePasswordForm.pw1.$dirty"
-          ' {{ "NEW_ERROR_PASSWORD_REQUIRED" | translate }}
+          ' {{ "ERROR_NEW_PASSWORD_REQUIRED" | translate }}
         .field-error ng-show="changePasswordForm.pw1.$error.minlength"
-          ' {{ "NEW_ERROR_PASSWORD_SHORT" | translate }}
+          ' {{ "ERROR_NEW_PASSWORD_SHORT" | translate }}
 
     .field
       input.form-control.span12(type="password" maxlength="60" placeholder="{{ 'NEW_PASSWORD_CONFIRMATION_PLACEHOLDER' | translate }}" ng-model="formData.password.new_password_confirmation" required id='pw2' name='pw2' pw-check="pw1" tooltip="{{ 'ONEW_PASSWORD_CONFIRMATION_TOOLTIP' | translate }}" tooltip-trigger="focus" tooltip-placement="left")
 
       .errors ng-show="changePasswordForm.pw2.$touched && changePasswordForm.pw2.$dirty"
         .field-error ng-show="changePasswordForm.pw2.$error.pwmatch && changePasswordForm.pw2.$dirty"
-          ' {{ "NEW_ERROR_PASSWORD_MISMATCH" | translate }}
+          ' {{ "ERROR_NEW_PASSWORD_MISMATCH" | translate }}
 
     button.btn.btn-default(style='width:100%;margin-top:10px;' ng-click="changePassword()")
       ' {{ "USER_EDIT_UPDATE" | translate }}
