[#5] Added i18n in emails, fixed ng-unique - when editing email it checks only emails other than current_user.email, added tests for #reset_password_email mailer

--- a/app/views/user_mailer/activation_needed_email.text.erb
+++ b/app/views/user_mailer/activation_needed_email.text.erb
@@ -1,5 +1,5 @@
-Witamy na naszej super stronie <%= @user.first_name %>
+<%= I18n.t('mailer.activation_needed_email.first_line') %> <%= @user.first_name %>
 ===============================================
-Witamy na stronie, <%= @user.first_name + ' ' + @user.last_name %>.
 
-Żeby potwierdzić rejestrację i zalogować się na stronie kliknij w link: <%= @url %>
+<%= I18n.t('mailer.activation_needed_email.second_line') %> <%= @user.first_name + ' ' + @user.last_name %>.
+<%= I18n.t('mailer.activation_needed_email.third_line') %> <%= @url %>
