--- a/app/views/user_mailer/reset_password_email.text.erb
+++ b/app/views/user_mailer/reset_password_email.text.erb
@@ -1,8 +1,7 @@
-Hello, <%= @user.email %>
+<%= I18n.t('mailer.reset_password_email.first_line') %> <%= @user.first_name + ' ' + @user.last_name %>.
 ===============================================
 
-You have requested to reset your password.
+<%= I18n.t('mailer.reset_password_email.second_line') %>
+<%= I18n.t('mailer.reset_password_email.third_line') %> <%= @url %> .
 
-To choose a new password, just follow this link: <%= @url %> .
-
-Have a great day!
+<%= I18n.t('mailer.reset_password_email.fourth_line') %>
