--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -53,13 +53,29 @@ li.header {
     vertical-align: top;
     padding-left: 0px;
     display: inline-block;
-    width: 130px;
+    width: 150px;
   }
   a:hover:after {
     font-family: FontAwesome;
     content: "\f178";
     display: inline-block;
     padding-left: 3px;
+  }
+}
+
+.columns {
+  .category-type {
+    text-transform: uppercase;
+    font-weight: bold;
+  }
+  .categories {
+    li {
+      padding-top: 3px;
+      a {
+        display: block;
+        width: 150px;
+      }
+    }
   }
 }
 
@@ -70,7 +86,7 @@ a.title {
   text-transform: uppercase;
 }
 
-header a {
+body header a {
   cursor: pointer;
   color: #777;
   &:hover {
@@ -187,6 +203,7 @@ input {
   left: 0px;
   width: 100%;
   padding-bottom: 10px;
+  padding-top: 15px;
   background: #fff;
   border-bottom: 1px #ecebe8 solid;
   background-position: right;
@@ -220,4 +237,5 @@ nav li:hover div {
 
 li:hover > a.title.top-border {
   border-top: 3px black solid;
+  color: black;
 }
