[#6] Added 'product_index' page with ctrl, changec products_controller, improved products representers, added menu on hover in 'product_index' page

--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -55,7 +55,7 @@ li.header {
     display: inline-block;
     width: 150px;
   }
-  a:hover:after {
+  a:hover:after, a:active:after {
     font-family: FontAwesome;
     content: "\f178";
     display: inline-block;
