--- a/app/assets/templates/products/products_index.html.slim
+++ b/app/assets/templates/products/products_index.html.slim
@@ -1,2 +1,19 @@
-/ div ng-repeat="product in data.products"
-/   ' {{ product }}
+.products
+    div ng-repeat="product in data.products" class="product product-{{product.id}}" ng-mouseover="hoverIn()" ng-mouseleave="hoverOut()"
+      .products-images style="position:relative"
+        img(ng-src="{{product.images[0].normal.url}}")
+
+        .options.alpha60white ng-click="navProductEdit(product.category, product.id, product.parameterize)" ng-show="hoverEdit" class="animate-show"
+          .colors
+            ' colors
+
+          .add-to-cart.alpha60black
+            ' to cart
+
+      .basic-info
+        p.name
+          ' {{ product.name }}
+        p.price
+          ' {{ product.price }}
+          ' {{ "CURRENCY" | translate }}
+
