--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -44,7 +44,7 @@ p.name {
 .options {
   display: block;
   position: absolute;
-  bottom: 0px;
+  bottom: 55px;
   left: 0px;
   width:100%;
   height:60px;
@@ -55,6 +55,12 @@ p.name {
   color: black;
   float: left;
   padding: 15px;
+  img {
+    width: 15px;
+    height: 15px;
+    margin: -1px;
+    border: 1px solid black;
+  }
 }
 
 .add-to-cart {
@@ -75,4 +81,20 @@ p.name {
 }
 .animate-show.ng-hide {
   opacity: 0;
+}
+
+.bgimage {
+  text-align: right;
+  color: white;
+  background-size: cover;
+  height: 100%;
+  background-position-x: 50%;
+  background-position-y: 50%;
+}
+
+.products {
+  ul[rn-carousel] {
+    width: 240px;
+    height: 240px;
+  }
 }
