--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -98,3 +98,52 @@ p.name {
     height: 240px;
   }
 }
+
+.product-name  {
+  font-size: 23px;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+.product-code {
+  font-size: 10px;
+  color: gray;
+}
+
+.product-price {
+  margin-top: 20px;
+  text-transform: uppercase;
+}
+
+.product-colors {
+  margin-top: 20px;
+  display: inline-block;
+  margin-right: 2px;
+  margin-left: 2px;
+  border: 1px solid black;
+}
+
+.product-sizes {
+  margin-top: 20px;
+  display: inline-block;
+  .size {
+    text-align: center;
+    font-size: 14px;
+    display: block;
+    padding:5px;
+    width: 35px;
+    margin: 2px;
+    border: 1px solid black;
+  }
+}
+
+.product-images {
+  z-index: 8000;
+
+}
+.product-info {
+  z-index: 10000;
+  position: absolute;
+  top: 130px;
+  right: 300px;
+}
