--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -147,3 +147,28 @@ p.name {
   top: 130px;
   right: 300px;
 }
+
+.product-back {
+  height: 40px;
+  display: block;
+  background: white;
+  text-transform: uppercase;
+  color: gray;
+  a {
+    display: block;
+    width: 200px;
+    font-size: 14px;
+    padding: 10px;
+    &:before {
+      font-family: FontAwesome;
+      content: "\f177";
+      display: inline-block;
+      padding-right: 6px;
+    }
+  }
+}
+
+.product-show {
+  margin-left: 0px;
+  margin-right: 0px;
+}
