--- a/app/assets/templates/products/product_show.html.slim
+++ b/app/assets/templates/products/product_show.html.slim
@@ -1,6 +1,7 @@
-.product
-  / ' {{ data.pr }}
-
+.product-show
+  .product-back
+    a ui-sref="products_index({ main_category: data.main_category, category_type: data.category_type, category: data.category })"
+      ' {{ "PRODUCT_SHOW_BACK" | translate }}
 
   .product-images
     carousel interval='10000000' disable-animation="true"
