--- a/app/assets/templates/products/products_index.html.slim
+++ b/app/assets/templates/products/products_index.html.slim
@@ -1,8 +1,7 @@
 .products
   div ng-repeat="product in data.products" class="product product-{{product.id}}" style="position:relative" ng-mouseover="hoverIn()" ng-mouseleave="hoverOut()"
-
     ul.image rn-carousel="" rn-carousel-index="products"
-      li ng-repeat="color in product.product_colors" ui-sref="products_show({ main_category: data.main_category, category_type: data.category_type, category: product.category.name, code: color.code  })"
+      li ng-repeat="color in product.product_colors" ui-sref="products_show({ main_category: product.category.category_type.main_category.name, category_type: product.category.category_type.name, category: product.category.name, code: color.code  })"
         .bgimage ng-style="{'background-image': 'url(' + color.product_images[0].normal.url + ')'}"
 
     .options.alpha60white ng-show="hoverEdit" class="animate-show"
