--- a/app/assets/templates/products/products_index.html.slim
+++ b/app/assets/templates/products/products_index.html.slim
@@ -17,3 +17,7 @@
         ' {{ "CURRENCY" | translate }}
       p.name
         ' {{ product.name }}
+
+  div ng-show="data.products.length==0"
+    h3.text-center style="text-transform: uppercase; margin-top: 150px"
+      ' {{ "PRODUCTS_SEARCH_NO_RESULTS" | translate }}
