--- a/app/assets/templates/global/header.html.slim
+++ b/app/assets/templates/global/header.html.slim
@@ -6,7 +6,7 @@ nav.main-nav
   ul.menu
     li.header ng-repeat="main_cat in data.categories"
 
-      a.title.top-border href="#"
+      a.title.top-border href="#" ng-class="{active: data.main_category==main_cat.main_cat}"
         ' {{ main_cat.main_cat }}
 
       .submenu-with-banner style="background-image: url({{ main_cat.main_cat_img.url }});background-size:340px;"
@@ -14,11 +14,11 @@ nav.main-nav
           ul.links ng-repeat="category_types in main_cat.category_types"
             .category-type
               li ui-sref="products_index({ main_category: main_cat.main_cat, category_type: category_types.category_type, category: '' })"
-                a
+                a ng-class="{active: data.main_category==main_cat.main_cat && data.category_type==category_types.category_type && data.category==''}"
                   ' {{ category_types.category_type }}
             .categories
               li ng-repeat="category in category_types.categories" ui-sref="products_index({ main_category: main_cat.main_cat, category_type: category_types.category_type, category: category.name })"
-                a
+                a ng-class="{active: data.main_category==main_cat.main_cat && data.category==category.name }"
                   ' {{ category.name }}
 
 nav.right-nav
