[#6] Added <- item/tems -> indicator in product show to change to previous and next item in category

--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -164,23 +164,36 @@ p.name {
   right: 300px;
 }
 
-.product-back {
+.product-top-bar {
   height: 40px;
   display: block;
   background: white;
   text-transform: uppercase;
   color: gray;
+  padding: 10px;
+  font-size: 14px;
+}
+
+.product-back {
+  float: left;
   a {
     display: block;
     width: 200px;
-    font-size: 14px;
-    padding: 10px;
     &:before {
       font-family: FontAwesome;
       content: "\f177";
       display: inline-block;
       padding-right: 6px;
     }
+  }
+}
+
+.products-indicator {
+  float: right;
+  .counter {
+    display: inline-block;
+    padding-right: 5px;
+    padding-left: 5px;
   }
 }
 
