--- a/app/assets/templates/global/header.html.slim
+++ b/app/assets/templates/global/header.html.slim
@@ -43,8 +43,8 @@ nav.right-nav
         i.fa.fa-shopping-cart
 
     li.search
-      input(id="search" placeholder="{{ 'HEADER_SEARCH_PRODUCTS_PLACEHOLDER' | translate }}" type="text" ng-model="formData.search_query" ng-show="data.search == 1" class="animate-show" ng-enter="searchShow()")
-      a ng-click="searchShow()"
+      input(id="search" placeholder="{{ 'HEADER_SEARCH_PRODUCTS_PLACEHOLDER' | translate }}" type="text" ng-model="formData.search_query" ng-show="data.search == 1" class="animate-show" ng-enter="searchShow()" focus-me="focusInput")
+      a ng-click="searchShow(); focusInput=true"
         i.fa.fa-search
 
     li.logout ng-show="data.user.id"
