--- a/app/assets/templates/products/products_search.html.slim
+++ b/app/assets/templates/products/products_search.html.slim
@@ -19,6 +19,6 @@
         p.name
           ' {{ product.name }}
 
-    div ng-show="data.products.length==0"
+    div ng-show="pagination.products.length==0"
       h3.text-center style="text-transform: uppercase; margin-top: 150px"
         ' {{ "PRODUCTS_SEARCH_NO_RESULTS" | translate }}
