--- a/app/assets/templates/products/products_index.html.slim
+++ b/app/assets/templates/products/products_index.html.slim
@@ -1,5 +1,82 @@
 .products
-  div infinite-scroll="pagination.nextPage(data.category, data.main_category, data.category_type)" infinite-scroll-distance="1" infinite-scroll-disabled="pagination.busy"
+  div infinite-scroll="pagination.nextPage(data.category, data.main_category, data.category_type, formData, sort)" infinite-scroll-distance="1" infinite-scroll-disabled="pagination.busy"
+
+    .product-top-bar
+      .products-sort ng-class="{active:dropdownSort}" ng-click="toggleDropdownSort()"
+        ' {{ "PRODUCTS_INDEX_SORT" | translate }}
+      .top-bar-dropdown.sort-dropdown ng-show="dropdownSort"
+        .close ng-click="toggleDropdownSort()"
+          ' x
+        a ng-class="{active:sortProd.class=='low'}" ng-click="sortProd('low');"
+          ' {{ "PRODUCTS_INDEX_SORT_LOWEST_PRICE" | translate }}
+        a ng-class="{active:sortProd.class=='high'}" ng-click="sortProd('high')"
+          ' {{ "PRODUCTS_INDEX_SORT_HIGHEST_PRICE" | translate }}
+        a ng-class="{active:sortProd.class=='new'}" ng-click="sortProd('new')"
+          ' {{ "PRODUCTS_INDEX_SORT_NEWEST" | translate }}
+
+      .products-filter ng-class="{active:dropdownFilter}" ng-click="toggleDropdownFilter()"
+        ' {{ "PRODUCTS_INDEX_FILTER" | translate }}
+        | [{{ pagination.count }}]
+      .top-bar-dropdown.filter-dropdown ng-show="dropdownFilter"
+        .close ng-click="toggleDropdownFilter()"
+          ' x
+        form name='filterForm'
+          .filter-dropdown-column style="width:120px;"
+            .title
+              ' {{ "PRODUCTS_INDEX_FILTER_COLOUR" | translate }}
+            ul ng-repeat="item in pagination.colors" style="margin-left:30px;"
+              label style="font-weight:normal"
+                input type="checkbox" checkbox-group="color"
+                  ' {{item}}
+
+          .filter-dropdown-column style="width:120px;"
+            .title
+              ' {{ "PRODUCTS_INDEX_FILTER_SIZE" | translate }}
+            ul ng-repeat="item in pagination.sizes" style="margin-left:40px;"
+              label style="font-weight:normal"
+                input type="checkbox" checkbox-group="size"
+                  ' {{item}}
+
+          .filter-dropdown-column style="width:140px;"
+            .title
+              ' {{ "PRODUCTS_INDEX_FILTER_PRICE" | translate }}
+            ul
+              .left-label
+                ' {{ "PRODUCTS_INDEX_FILTER_PRICE_FROM" | translate }}
+              input type="text" ng-model="formData.price_from"
+              .right-label
+                ' {{ "CURRENCY" | translate }}
+              .errors ng-show="filterForm.price_from.$touched && filterForm.price_from.$dirty"
+                .field-error ng-show="filterForm.price_from.$error.pattern"
+                  ' {{ "ERROR_PRICE_FROM_PATTERN" | translate }}
+
+            ul
+              .left-label
+                ' {{ "PRODUCTS_INDEX_FILTER_PRICE_TO" | translate }}
+              input type="text" ng-model="formData.price_to"
+              .right-label
+                ' {{ "CURRENCY" | translate }}
+              .errors ng-show="filterForm.price_to.$touched && filterForm.price_to.$dirty"
+                .field-error ng-show="filterForm.price_to.$error.pattern"
+                  ' {{ "ERROR_PRICE_TO_PATTERN" | translate }}
+
+          .dropdown-buttons
+            button.btn.btn-default ng-click="filterProd()"
+              ' {{ "PRODUCTS_INDEX_FILTER_BUTTON" | translate }}
+            button.btn.btn-default ng-click="cancelForm()"
+              ' {{ "PRODUCTS_INDEX_FILTER_CANCEL" | translate }}
+
+      .products-sort-active ng-show="sort"
+        .active-sort style="display:inline-block" translate="{{sort}}"
+        .close style="font-size:12px;display:inline-block;padding-top:2px;padding-left:5px;" ng-click="cancelSort()"
+          ' x
+
+      .products-category
+        ' {{ data.category }}
+
+      .products-view
+        ' {{ "PRODUCTS_INDEX_VIEW" | translate }}
+
     div ng-repeat="product in pagination.products" class="product product-{{product.id}}" style="position:relative" ng-mouseover="hoverIn()" ng-mouseleave="hoverOut()"
       ul.image rn-carousel="" rn-carousel-index="products"
         li ng-repeat="color in product.product_colors" ui-sref="products_show({ main_category: product.category.category_type.main_category.name, category_type: product.category.category_type.name, category: product.category.name, code: color.code  })"
@@ -18,7 +95,3 @@
           ' {{ "CURRENCY" | translate }}
         p.name
           ' {{ product.name }}
-
-    div ng-show="pagination.products.length==0"
-      h3.text-center style="text-transform: uppercase; margin-top: 150px"
-        ' {{ "PRODUCTS_SEARCH_NO_RESULTS" | translate }}
