--- a/app/assets/templates/global/header.html.slim
+++ b/app/assets/templates/global/header.html.slim
@@ -14,11 +14,11 @@ nav.main-nav
           ul.links ng-repeat="category_types in main_cat.category_types"
             .category-type
               li
-                a ng-class="{active: data.main_category==main_cat.main_cat && data.category_type==category_types.category_type && data.category==''}" ui-sref="products_index({ main_category: main_cat.main_cat, category_type: category_types.category_type, category: '' })"
+                a ui-sref="products_index({ main_category: main_cat.main_cat, category_type: category_types.category_type, category: '' })" ui-sref-active="active"
                   ' {{ category_types.category_type }}
             .categories
               li ng-repeat="category in category_types.categories"
-                a ng-class="{active: data.main_category==main_cat.main_cat && data.category==category.name }" ui-sref="products_index({ main_category: main_cat.main_cat, category_type: category_types.category_type, category: category.name })"
+                a ui-sref="products_index({ main_category: main_cat.main_cat, category_type: category_types.category_type, category: category.name })" ui-sref-active="active"
                   ' {{ category.name }}
 
 nav.right-nav
