[#6] Add URL to products in products inted page

--- a/app/assets/templates/products/products_index.html.slim
+++ b/app/assets/templates/products/products_index.html.slim
@@ -79,8 +79,9 @@
 
     div ng-repeat="product in pagination.products" class="product product-{{product.id}}" style="position:relative" ng-mouseover="hoverIn()" ng-mouseleave="hoverOut()"
       ul.image rn-carousel="" rn-carousel-index="products"
-        li ng-repeat="color in product.product_colors" ui-sref="products_show({ main_category: product.category.category_type.main_category.name, category_type: product.category.category_type.name, category: product.category.name, code: color.code  })"
-          .bgimage ng-style="{'background-image': 'url(' + color.product_images[0].normal.url + ')'}"
+        li ng-repeat="color in product.product_colors"
+          a ui-sref="products_show({ main_category: product.category.category_type.main_category.name, category_type: product.category.category_type.name, category: product.category.name, code: color.code })"
+            .bgimage ng-style="{'background-image': 'url(' + color.product_images[0].normal.url + ')'}"
 
       .options.alpha60white ng-show="hoverEdit" class="animate-show"
         .colors.rn-carousel-indicator rn-carousel-index="products"
