--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -148,23 +148,45 @@ input {
 }
 
 .cart {
+  position: relative;
   float: right;
   background: black;
   a {
     color: white;
     display: block;
-    width: 60px;
+    padding-left: 20px;
+    padding-right: 20px;
     height: 60px;
     &:hover {
-      color: gray;
+      color: #D3D3D3;
     }
     i {
+      display: inline-block;
       font-size: 20px;
-      padding-left: 20px;
       padding-top: 18px;
+    }
+    .cart-items-header {
+      padding-left: 10px;
+      padding-top: 18px;
+      display: inline-block;
+      .total-price-header {
+        text-transform: uppercase;
+      }
+      .cart-count-header {
+        position: absolute;
+        top: 0px;
+        right: 0px;
+        padding-top: 1px;
+        padding-bottom: 1px;
+        padding-right: 5px;
+        padding-left: 5px;
+        background: red;
+        color: white;
+      }
     }
   }
 }
+
 
 .logout {
   float: right;
@@ -225,7 +247,9 @@ input {
 }
 
 nav li div {
-  display: none;
+  &.submenu-with-banner, &.submenu-small {
+    display: none;
+  }
 }
 
 nav li:hover div {
