--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -311,16 +311,16 @@ p.name {
 
 .product-sizes {
   margin-top: 20px;
-  display: inline-block;
+  display: block;
   .size {
+    display: inline-block;
     cursor: pointer;
     text-align: center;
     font-size: 14px;
-    display: block;
     padding:5px;
     width: 35px;
     margin: 2px;
-    &:hover, &:active {
+    &:hover, &.active {
       border: 1px solid black;
     }
   }
@@ -331,19 +331,45 @@ p.name {
   margin-right: 0px;
 }
 
-.product-info-collapse {
-  margin-top: 10px;
-  text-transform: uppercase;
-  font-size: 13px;
-  p:before {
-    font-family: FontAwesome;
-    content: "\f104";
-    display: inline-block;
-    padding-right: 6px;
+.add-to-cart-button {
+  margin-top: 20px;
+  display: block;
+  a {
+    padding-top: 20px;
+    padding-left: 20px;
+    display: block;
+    width: 135px;
+    height: 60px;
+    background: black;
+    color: white;
+    &:hover {
+      color: white;
+      &:after {
+        font-family: FontAwesome;
+        content: "\f217";
+        display: inline-block;
+        padding-left: 3px;
+      }
+    }
+  }
+}
+
+.product-info-show {
+  margin-top: 20px;
+  .product-info-collapse {
+    font-size: 13px;
+    text-transform: uppercase;
+    p:before {
+      font-family: FontAwesome;
+      content: "\f104";
+      display: inline-block;
+      padding-right: 6px;
+    }
   }
 }
 
 .product-composition, .product-return, .product-shipping {
   margin-top: -5px;
+  margin-bottom: 5px;
   font-size: 11px;
 }
