[#9] order counter in header refreshes after adding to cart

--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -313,6 +313,7 @@ p.name {
   margin-top: 20px;
   display: block;
   .size {
+    border: 1px solid transparent;
     display: inline-block;
     cursor: pointer;
     text-align: center;
