[#9] 9.1 moved functions to 'orderDetailData' service

--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -190,7 +190,7 @@ input {
 .cart-list-header {
   position: absolute;
   top: 60px;
-  left: -300px;
+  white-space: nowrap;
   right: -60px;
   background: black;
   display: block;
