--- a/app/assets/templates/products/product_show.html.slim
+++ b/app/assets/templates/products/product_show.html.slim
@@ -36,7 +36,7 @@
     br
 
     .product-sizes
-      div ng-repeat="size in data.pr_det.product_sizes" class="size size-{{size.size}}" ng-class="{active: size.id == formData.size_id}" ng-click="chooseSize(size.id, size.size)"
+      div ng-repeat="size in data.pr_det.product_sizes" class="size size-{{size.size}}" ng-class="{active: size.id == formData.size_id}" ng-click="chooseSize(size.id)"
         ' {{ size.size }}
 
     .add-to-cart-button
