--- a/app/assets/templates/products/products_index.html.slim
+++ b/app/assets/templates/products/products_index.html.slim
@@ -78,7 +78,7 @@
         ' {{ "PRODUCTS_INDEX_VIEW" | translate }}
 
     div ng-repeat="product in pagination.products" class="product product-{{product.id}}" style="position:relative"
-      product product="product"
+      my-products-index-item product="product"
 
   div ng-show="pagination.products.length==0"
     h3.text-center style="text-transform: uppercase; margin-top: 150px"
