--- a/app/assets/templates/products/product_show.html.slim
+++ b/app/assets/templates/products/product_show.html.slim
@@ -39,15 +39,7 @@
       div ng-repeat="size in data.pr_det.product_sizes" class="size size-{{size.size}}" ng-class="{active: size.id == formData.size_id}" ng-click="chooseSize(size.id)"
         ' {{ size.size }}
 
-    .modal-product-sizes ng-show="sizeModal"
-      .modal-background ng-click="sizeModal = 0"
-      .modal-sizes
-        .modal-close ng-click="sizeModal = 0"
-          ' x
-        p
-          ' {{ "PRODUCT_SHOW_CHOOSE_SIZE" | translate }}
-        div ng-repeat="size in data.pr_det.product_sizes" class="size size-{{size.size}}" ng-class="{active: size.id == formData.size_id}" ng-click="chooseSize(size.id)"
-          ' {{ size.size }}
+    my-modal-size
 
     .add-to-cart-button
       a ng-click="addToCart()"
